added tests for notification